--- a/source/sass/blocks/about/about-details.scss
+++ b/source/sass/blocks/about/about-details.scss
@@ -10,7 +10,7 @@
 }
 
 .about-details__title {
-  margin: 40px 0 12px;
+  margin: 0 0 12px;
 }
 
 .about-details__sub-title {
@@ -19,7 +19,7 @@
 
 @media #{$mobile-only} {
   .about-details {
-    padding: 0 15px;
+    padding: 40px 15px 0 15px;
   }
 }
 
