--- a/source/sass/blocks/faq/faq-tab.scss
+++ b/source/sass/blocks/faq/faq-tab.scss
@@ -12,6 +12,7 @@
   z-index: 1;
   transition: color 0.3s $smooth, border 0.3s $smooth;
   cursor: pointer;
+  color: $primary;
 
   &::after {
     position: absolute;
@@ -20,7 +21,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    background:  linear-gradient(151deg, #ed0233 0%, #003eb7 100%);
+    background: linear-gradient(153deg, #ed0233 0%, #003eb7 100%);
     z-index: -1;
     transform-origin: left;
     transform: scaleX(0);
