--- a/source/sass/blocks/footer/footer.scss
+++ b/source/sass/blocks/footer/footer.scss
@@ -23,10 +23,13 @@
   .footer__footer-wrapper {
     gap: 30px 0;
     justify-content: space-between;
+    padding: 45px 0;
   }
 
   .footer__logo-wrapper {
     width: min-content;
+    position: relative;
+    top: -2px;
   }
 }
 
