--- a/source/sass/blocks/hero/hero-header.scss
+++ b/source/sass/blocks/hero/hero-header.scss
@@ -48,11 +48,6 @@
 
   &:active::after {
     width: 100%;
-
-    // color: $primary;
-    // text-decoration: underline;
-    // text-decoration-thickness: 2px; /* Толщина подчеркивания в активном состоянии */
-    // text-underline-offset: 6px;
   }
 
   &:disabled {
@@ -63,7 +58,8 @@
 @media #{$not-mobile} {
   .hero-header__phone {
     @include apply-styles($tablet-h4);
-
+    position: relative;
+    top: 1px;
     max-width: 330px;
   }
 
