--- a/source/sass/blocks/offers/offer-link.scss
+++ b/source/sass/blocks/offers/offer-link.scss
@@ -8,7 +8,7 @@
   min-width: 73px;
   max-height: 100%;
   text-decoration: none;
-  padding: 10px;
+  padding: 1px 10px 10px 10px;
   transition: opacity 0.3s $smooth, outline 0.3s $smooth, background 0.3s $smooth;
 
   &::after {
@@ -18,7 +18,7 @@
     width: calc(100% - 20px);
     background-color: #74819c;
     left: 10px;
-    bottom: 0;
+    bottom: 5px;
   }
 
   &--main {
