--- a/source/sass/blocks/offers/offer.scss
+++ b/source/sass/blocks/offers/offer.scss
@@ -10,7 +10,7 @@
 
   .offer__content-wrapper--aside {
     background-color: $white-primary;
-    padding: 20px;
+    padding: 20px 20px 15px 20px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -32,6 +32,23 @@
   }
 }
 
+.offer__content-wrapper--aside {
+
+  div {
+    display: flex;
+    flex-flow: wrap column;
+    gap: 20px;
+  }
+
+  p {
+    margin: 0;
+  }
+}
+
+.offer__picture-wrapper {
+  margin: 0 0 10px;
+}
+
 .offer--main {
   padding: 0;
   margin: 0;
@@ -47,10 +64,11 @@
   flex-flow: wrap column;
   align-items: center;
   text-align: center;
-  padding: 30px;
+  padding: 30px 30px 16px 30px;
   background-color: #ed0233;
   color: $white-primary;
   width: 320px;
+  min-height: 271px;
 
   .offer__picture-wrapper {
     padding: 0;
@@ -131,6 +149,7 @@
     width: 678px;
     height: 462px;
     margin: 0;
+    align-items: flex-start;
   }
 
   .offer--main .offer__content-wrapper {
@@ -145,6 +164,7 @@
     div {
       max-height: 302px;
       overflow-y: auto;
+      gap: 0
     }
 
     h3 {
