--- a/source/sass/blocks/price/price-select.scss
+++ b/source/sass/blocks/price/price-select.scss
@@ -16,12 +16,12 @@
     width: 100%;
     height: 2px;
     background-color: rgba(120, 120, 120, 0.2);
-    bottom: 0;
+    bottom: 2px;
   }
 }
 
 .price-select__title {
-  margin: 0 0 30px;
+  margin: 0 0 32px;
   text-align: center;
 }
 
@@ -92,7 +92,7 @@
   &::after {
     transform: scaleX(1);
     background-color: #d10a42;
-    bottom: 0;
+    bottom: 2px;
   }
 }
 
