--- a/source/sass/blocks/reviews/reviews.scss
+++ b/source/sass/blocks/reviews/reviews.scss
@@ -71,7 +71,7 @@
 
   img {
     top: 0;
-    object-position: center -4px;
+    object-position: -2px -4px;
     width: 109px;
     height: 93px;
   }
