--- a/source/sass/blocks/faq/accordeon-item.scss
+++ b/source/sass/blocks/faq/accordeon-item.scss
@@ -4,7 +4,7 @@
   gap: 20px;
   position: relative;
   transition: all 0.3s $smooth;
-  padding: 20px 0 21px 0;
+  padding: 20px 0 21px;
   text-align: left;
   align-items: center;
   top: 2px;
@@ -14,7 +14,7 @@
     content: "";
     width: 100%;
     height: 1px;
-    background-color: #74819C;
+    background-color: #74819c;
     top: -2px;
     left: 0;
   }
@@ -30,7 +30,7 @@
     content: "";
     width: 100%;
     height: 1px;
-    background-color: #74819C;
+    background-color: #74819c;
     bottom: 1px;
     left: 0;
   }
@@ -51,7 +51,7 @@
   left: 2px;
 
   &:hover {
-    background-color: #1C3374;
+    background-color: #1c3374;
   }
 
   &:hover::before {
@@ -63,8 +63,8 @@
   }
 
   &:focus-visible {
-    background-color: #74819C;
-    border: solid 1px #1C3374;
+    background-color: #74819c;
+    border: solid 1px #1c3374;
     outline: none;
   }
 
@@ -84,7 +84,7 @@
     left: 7px;
     top: 48%;
     transform: rotate(90deg);
-    background-color: #1C3374;
+    background-color: #1c3374;
     transition: background 0.3s $smooth, transform 0.3s $smooth;
   }
 
@@ -96,7 +96,7 @@
     left: 7px;
     top: 48%;
     transform: rotate(180deg);
-    background-color: #1C3374;
+    background-color: #1c3374;
     transition: background 0.3s $smooth, transform 0.3s $smooth;
   }
 }
@@ -143,13 +143,16 @@
   display: flex;
   align-items: center;
   min-height: 40px;
+
   @include apply-styles($mobile-h5);
+
   margin: 0;
   padding: 0 30px 0 0;
 }
 
 .accordeon-item__content p {
   @include apply-styles($mobile-large-text);
+
   max-height: 0;
   overflow: hidden;
   margin: 0;
@@ -174,6 +177,7 @@
     padding: 23px 0;
     gap: 10px;
     justify-content: space-between;
+
     div {
       width: 560px;
     }
@@ -203,15 +207,17 @@
 
   .accordeon-item__content h3 {
     @include apply-styles($tablet-h5);
+
     padding: 0 60px 0 0;
   }
 
   .accordeon-item__content p {
     @include apply-styles($universal-large-text);
+
     margin: 0;
   }
 
-  .accordeon-item__content--active p{
+  .accordeon-item__content--active p {
     margin: 10px 0 0;
   }
 
@@ -253,17 +259,37 @@
 
 @media #{$desktop-only} {
   .accordeon-item {
+    padding: 22px 0;
+
     div {
       width: 660px;
     }
   }
 
-  .accordeon-item__content h3 {
-    @include apply-styles($desktop-h5);
-    padding: 0 60px 0 0
+  .accordeon-item__open-button {
+    top: 2px;
   }
 
-  .accordeon-item__content--active p{
+  .accordeon-item__open-button--first {
+    transform: translateY(-49px);
+    top: 1px;
+  }
+
+  .accordeon-item__content h3 {
+    @include apply-styles($desktop-h5);
+
+    padding: 0 60px 0 0;
+  }
+
+  .accordeon-item__content--active p {
     margin: 23px 0 0;
+  }
+
+  .accordeon-item:last-child::after {
+    bottom: -7px;
+  }
+
+  .accordeon-item:last-child h3 {
+    top: 3px;
   }
 }
