--- a/source/sass/blocks/faq/faq-accordeon.scss
+++ b/source/sass/blocks/faq/faq-accordeon.scss
@@ -3,3 +3,10 @@
   margin: 0;
   list-style-type: none;
 }
+
+@media #{$desktop-only} {
+  .faq-accordeon {
+    position: relative;
+    top: -1px;
+  }
+}
