--- a/source/sass/blocks/faq/faq.scss
+++ b/source/sass/blocks/faq/faq.scss
@@ -30,9 +30,12 @@
     justify-content: start;
     grid-template-columns: 260px 1fr;
     gap: 50px 40px;
+    padding: 100px 0;
   }
+
   .faq__title {
     grid-column: 1/-1;
     text-align: left;
+    top: 0;
   }
 }
