--- a/source/sass/blocks/offers/offer-link.scss
+++ b/source/sass/blocks/offers/offer-link.scss
@@ -8,7 +8,7 @@
   min-width: 73px;
   max-height: 100%;
   text-decoration: none;
-  padding: 1px 10px 10px 10px;
+  padding: 1px 10px 10px;
   transition: opacity 0.3s $smooth, outline 0.3s $smooth, background 0.3s $smooth;
 
   &::after {
@@ -57,3 +57,17 @@
   pointer-events: none;
 }
 
+@media #{$desktop-only} {
+  .offer-link {
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: wrap;
+    align-items: center;
+    padding: 1px 10px 10px 0;
+
+    &::after {
+      left: 0;
+      width: calc(100% - 10px);
+    }
+  }
+}
