--- a/source/sass/blocks/offers/offer.scss
+++ b/source/sass/blocks/offers/offer.scss
@@ -10,7 +10,7 @@
 
   .offer__content-wrapper--aside {
     background-color: $white-primary;
-    padding: 20px 20px 15px 20px;
+    padding: 20px 20px 15px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -33,7 +33,6 @@
 }
 
 .offer__content-wrapper--aside {
-
   div {
     display: flex;
     flex-flow: wrap column;
@@ -64,7 +63,7 @@
   flex-flow: wrap column;
   align-items: center;
   text-align: center;
-  padding: 30px 30px 16px 30px;
+  padding: 30px 30px 16px;
   background-color: #ed0233;
   color: $white-primary;
   width: 320px;
@@ -164,7 +163,7 @@
     div {
       max-height: 302px;
       overflow-y: auto;
-      gap: 0
+      gap: 0;
     }
 
     h3 {
@@ -201,6 +200,12 @@
 
   .offer--main {
     width: 560px;
+  }
+
+  .offer--main .offer__content-wrapper {
+    padding: 40px 45px;
+    gap: 0;
+    height: 460px;
   }
 
   .offer__content-wrapper--main {
