--- a/source/sass/blocks/price/price-select.scss
+++ b/source/sass/blocks/price/price-select.scss
@@ -57,7 +57,7 @@
     &::after {
       background-color: #787878;
       transform: scaleX(1);
-      bottom: 0;
+      bottom: 2px;
       transform-origin: left;
     }
   }
