--- a/source/sass/blocks/reviews/reviews.scss
+++ b/source/sass/blocks/reviews/reviews.scss
@@ -10,7 +10,7 @@
   position: relative;
 }
 
-.reviews__button-wrapper  {
+.reviews__button-wrapper {
   position: absolute;
   display: none;
 }
@@ -45,7 +45,7 @@
 }
 
 .reviews__slide {
-  background-color: #1C3374;
+  background-color: #1c3374;
   width: 240px;
   height: 328px;
   color: $white-primary;
@@ -77,13 +77,15 @@
   }
 
   h3 {
-    margin: 10px 0 0 0;
+    margin: 10px 0 0;
+
     @include apply-styles($mobile-h6);
   }
 
   p {
     @include apply-styles($mobile-medium-text);
-    margin: 16px 0 0 0;
+
+    margin: 16px 0 0;
     width: 190px;
   }
 }
@@ -95,7 +97,7 @@
     gap: 35px;
   }
 
-  .reviews__button-wrapper  {
+  .reviews__button-wrapper {
     display: block;
     top: 105px;
     width: 20px;
@@ -104,6 +106,7 @@
     &--prev {
       left: 0;
     }
+
     &--next {
       right: 30px;
     }
@@ -182,13 +185,16 @@
 
     h3 {
       margin: 0;
+
       @include apply-styles($desktop-h6);
+
       grid-column: 2/3;
       grid-row: span 1;
     }
 
     p {
       @include apply-styles($universal-medium-text);
+
       margin: 0;
       grid-column: 2/3;
       grid-row: span 1;
@@ -204,13 +210,14 @@
     gap: 75px;
   }
 
-  .reviews__button-wrapper  {
+  .reviews__button-wrapper {
     display: block;
     top: 113px;
 
     &--prev {
       left: 196px;
     }
+
     &--next {
       right: 226px;
     }
