--- a/source/sass/blocks/form/contact.scss
+++ b/source/sass/blocks/form/contact.scss
@@ -22,8 +22,30 @@
 }
 
 .contact__content--link {
+  position: relative;
   &:hover {
     opacity: 0.7;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: calc(100% + 10px);
+    height: calc(100% + 10px);
+    left: -5px;
+    top: -5px;
+    border: solid 1px $primary;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s $smooth;
+  }
+
+  &:focus-visible {
+    outline: none;
+  }
+
+  &:focus-visible::after {
+    transform: scaleX(1);
   }
 
   &:active {
