--- a/source/sass/blocks/juri/juri.scss
+++ b/source/sass/blocks/juri/juri.scss
@@ -180,23 +180,40 @@
 
 .juri__swiper-slide-genre {
   @include apply-styles($universal-medium-text);
-
+  align-self: flex-start;
   width: 52px;
   color: #b6bdcc;
-  margin: 8px 0 33px;
+  margin: 8px 0 0;
   z-index: 2;
 }
 
 .juri__swiper-slide-description {
   @include apply-styles($universal-small-text);
-
+  align-self: flex-start;
   color: $white-primary;
   display: flex;
   flex-flow: wrap column;
+  list-style-type: none;
   gap: 12px;
   padding: 0 50px 0 66px;
   margin: 0;
   z-index: 2;
+  position: relative;
+  top: -6px;
+}
+
+.juri__swiper-slide-text {
+  position: relative;
+  &::before {
+    position: absolute;
+    content: "";
+    width: 6px;
+    height: 6px;
+    background-color: $white-primary;
+    left: -16px;
+    border-radius: 50%;
+    top: 8px;
+  }
 }
 
 @media #{$not-mobile} {
