fixed some fonts on desktop

--- a/source/sass/blocks/offers/offer-link.scss
+++ b/source/sass/blocks/offers/offer-link.scss
@@ -53,11 +53,11 @@
 
 .offer-link--aside {
   &:focus-visible {
-    outline: solid 1px #1C3374;
+    outline: solid 1px #1c3374;
   }
 
   &::before {
-    border-color: #1C3374;
+    border-color: #1c3374;
   }
 }
 
