--- a/source/sass/blocks/footer/socials.scss
+++ b/source/sass/blocks/footer/socials.scss
@@ -16,25 +16,22 @@
   width: 25px;
   height: 25px;
   transition: background 0.3s $smooth;
+}
 
-  &:has(.socials__link:focus-visible) {
-    background-color: #103aae;
-  }
-
-  &:has(.socials__link:hover) {
-    background-color: #74819c;
-  }
-
-  &:has(.socials__link:active) {
-    background-color: $primary;
-  }
-
-  &:has(.socials__link--disabled) {
-    pointer-events: none;
-    cursor: auto;
-    background-color: $white-primary;
-    opacity: 0.3;
-  }
+.socials__item:has(.socials__link:focus-visible) {
+  background-color: #103aae;
+}
+.socials__item:has(.socials__link:hover) {
+  background-color: #74819c;
+}
+.socials__item:has(.socials__link:active) {
+  background-color: $primary;
+}
+.socials__item:has(.socials__link--disabled) {
+  pointer-events: none;
+  cursor: auto;
+  background-color: $white-primary;
+  opacity: 0.3;
 }
 
 .socials__link {
