--- a/source/sass/blocks/footer/footer-nav.scss
+++ b/source/sass/blocks/footer/footer-nav.scss
@@ -72,6 +72,12 @@
     pointer-events: none;
     cursor: auto;
   }
+
+  &:disabled {
+    opacity: 0.4;
+    pointer-events: none;
+    cursor: auto;
+  }
 }
 
 @media #{$not-mobile} {
