--- a/source/sass/blocks/form/form.scss
+++ b/source/sass/blocks/form/form.scss
@@ -1,6 +1,7 @@
 .form {
   background-color: $primary;
   overflow: hidden;
+  min-height: 832px;
 }
 
 .form__contacts-wrapper {
@@ -8,7 +9,17 @@
   width: 100%;
 }
 
+@media #{$not-mobile} {
+  .form {
+    min-height: 665px;
+  }
+}
+
 @media #{$desktop-only} {
+  .form {
+    min-height: 338px;
+  }
+
   .form__form-wrapper {
     display: flex;
     flex-flow: row wrap;
