--- a/source/sass/blocks/faq/faq-tab.scss
+++ b/source/sass/blocks/faq/faq-tab.scss
@@ -11,7 +11,7 @@
   border: solid 1px rgba(16, 38, 84, 0.2);
   position: relative;
   z-index: 1;
-  transition: color 0.3s $smooth, border 0.3s $smooth;
+  transition: color 0.3s $smooth, border 0.3s $smooth, background 0.3s $smooth;
   cursor: pointer;
   color: $primary;
 
@@ -44,11 +44,19 @@
 
   &:focus-visible {
     border-color: $primary;
+    background-color: $white-primary;
     outline: none;
   }
 }
 
 .faq-tab__button--disabled {
+  background: transparent;
+  color: #c8c9cc;
+  cursor: auto;
+  pointer-events: none;
+}
+
+.faq-tab__button:disabled {
   background: transparent;
   color: #c8c9cc;
   cursor: auto;
