--- a/source/sass/blocks/price/price-card.scss
+++ b/source/sass/blocks/price/price-card.scss
@@ -64,13 +64,25 @@
 .price-card:hover .price-card__buy-button::after {
   transform: scaleX(1);
 }
+
 .price-card:hover .price-card__buy-button {
   transform: scaleX(1);
   color: $white-primary;
   border-color: transparent;
 }
+
 .price-card:hover .price-card__buy-button:active {
   color: rgba(255, 255, 255, 0.44);
+}
+
+.price-card:hover .button--button-primary-disabled::after {
+  transform: scaleX(0);
+}
+
+.price-card:hover .button--button-primary-disabled {
+  background: $white-primary;
+  color: $primary;
+  border-color: $primary;
 }
 
 
@@ -88,7 +100,7 @@
   display: flex;
   flex-flow: wrap column;
   gap: 18px;
-  justify-content: space-between
+  justify-content: space-between;
 }
 
 .price-card__title {
