--- a/source/sass/blocks/offers/offer.scss
+++ b/source/sass/blocks/offers/offer.scss
@@ -68,6 +68,7 @@
   color: $white-primary;
   width: 320px;
   min-height: 271px;
+  overflow: auto;
 
   .offer__picture-wrapper {
     padding: 0;
